--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-stripe-checkout": "^1.2.6",
     "vuetify": "^1.5.14",
     "vuex": "^3.1.1"
   },
