--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-notification": "^1.3.16",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6",
     "vue-stripe-checkout": "^1.2.6",
