--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@chenfengyuan/vue-qrcode": "^1.0.1",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.25",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-notification": "^1.3.16",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6",
     "vue-stripe-checkout": "^1.2.6",
+    "vuejs-datepicker": "^1.6.2",
     "vuetify": "^1.5.14",
+    "vuetify-datetime-picker": "^1.0.13",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
@@ -25,6 +30,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
